Check Account and pwd.
We can check account and pwd. 6-16 [A-Za-z0-9]

--- a/register/register.css
+++ b/register/register.css
@@ -45,7 +45,7 @@ div.form_div_row {
 	text-align: left;
 }
 
-#p_account_hint_info {
+.p_hint_info {
 	display: table-cell;
 	color: red;
 	visibility: hidden;
