--- a/register/register.css
+++ b/register/register.css
@@ -80,7 +80,7 @@ p.p_table_cell{
 }
 
 header {
-	background-image: url(../login_header.png);
+	background-image: url(../img/register/login_header.png);
 	background-repeat: no-repeat;
 	background-position: center;
 	margin: 0;
